--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pandas
-scikit-learn
-imblearn
-streamlit
-joblib
+pandas==1.3.3
+numpy==1.21.2
+scikit-learn==1.0
+imblearn==0.8.0
+streamlit==1.3.1
+joblib==1.1.0
