--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit>=1.15.0
 pandas>=1.3.0
-numpy>=1.22
-Cython>=0.29.21
-scikit-learn>=0.24.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
+numpy>=1.21
+scikit-learn>=0.24
+imbalanced-learn>=0.8.0
+joblib>=1.0.0
