--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit>=1.15.0
-pandas>=1.3.0
-numpy>=1.21
-scikit-learn>=0.24
-imbalanced-learn>=0.8.0
-joblib>=1.0.0
+streamlit==1.25.0
+pandas==2.1.0
+scikit-learn==1.3.0
+imblearn==0.0
+joblib==1.4.0
+numpy==1.25.0
+matplotlib==3.8.0
