--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.25.0
-pandas==2.1.0
-scikit-learn==1.3.0
-imblearn==0.0
-joblib==1.4.0
-numpy==1.25.0
-matplotlib==3.8.0
+pandas
+scikit-learn
+imblearn
+streamlit
+joblib
